--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Octodex</title>
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header>
+      <div class="headerbox">
+          <img class ="logoimg" src="/images/logo.png">
+          <div class="nav">
+            <ul>
+              <li>RSS</li>
+              <li>FAQ</li>
+              <li>Back to GitHub</li>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <main>
+        <h1>Hello, World!</h1>
+      </main>
   </body>
 </html>
