--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,34 @@
 
 <body>
   <header>
-    <h1>GitHubOctodex</h1>
+    <nav>
+      <h1>GitHubOctodex</h1>
 
-    <ul>
-
-      <li>RSS</li>
-
-      <li>FAQ</li>
-
-      <li>Back to GitHub</li>
-
-    </ul>
-
-
+      <ul>
+        <li>RSS</li>
+        <li>FAQ</li>
+        <li>Back to GitHub</li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="http://placehold.it/426x426/" height="426" width="426">
   </main>
 
   <footer>
-    
+
   </footer>
 </body>
 
