--- a/public/index.html
+++ b/public/index.html
@@ -10,30 +10,30 @@
 
 <body>
   <header>
-    <nav>
-      <h1>GitHubOctodex</h1>
 
-      <ul>
-        <li>RSS</li>
-        <li>FAQ</li>
-        <li>Back to GitHub</li>
-      </ul>
-    </nav>
+    <a href="github.com"><img class="logo" src="/images/logo.png" alt="Logo"></a>
+
+    <ul>
+      <li><a href="RSS.html">RSS</a></li>
+      <li><a href="FAQ.html">FAQ</a></li>
+      <li><a href="github.com">Back to GitHub</a></li>
+    </ul>
+
   </header>
 
   <main>
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
-    <img src="http://placehold.it/426x426/" height="426" width="426">
+    <img src="/images/bannekat.png" height="426" width="426">
+    <img src="/images/skatetocat.png" height="426" width="426">
+    <img src="/images/bewitchedtocat.jpg" height="426" width="426">
+    <img src="/images/welcometocat.png" height="426" width="426">
+    <img src="/images/privateinvestocat.jpg" height="426" width="426">
+    <img src="/images/catstello.png" height="426" width="426">
+    <img src="/images/filmtocat.png" height="426" width="426">
+    <img src="/images/gobbleotron.gif" height="426" width="426">
+    <img src="/images/gracehoppertocat.jpg" height="426" width="426">
+    <img src="/images/hanukkat.png" height="426" width="426">
+    <img src="/images/inflatocat.png" height="426" width="426">
+    <img src="/images/mcefeeline.jpg" height="426" width="426">
   </main>
 
   <footer>
